feat: get permissions by filter
